# pi-archgraph

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/: index.ts
src/core/: workspace-indexer.ts
src/frontends/: detect.ts  edge-targets.ts  frontend.ts  index.ts  registry.ts
src/frontends/c/: c-frontend.ts  index.ts
src/frontends/cpp/: cpp-frontend.ts  index.ts
src/frontends/python/: index.ts  python-frontend.ts
src/frontends/rust/: index.ts  rust-frontend.ts
src/frontends/typescript/: index.ts  ts-frontend.ts
src/graph/: analyzer.ts  db.ts  domains.ts  lock.ts  metadata.ts  patch.ts  queries.ts  query.ts  schema.ts  semantics.ts  traversal.ts
src/tools/: hooks.ts  impact.ts  inspect.ts  overview.ts  tools.ts
src/util/: hashing.ts  meta.ts  paths.ts  wasm-paths.ts
tests/fixtures/multi-lang-project/: CMakeLists.txt
tests/fixtures/multi-lang-project/src/c/: main.c  shapes.c  shapes.h
tests/fixtures/multi-lang-project/src/cpp/: main.cpp  shapes.cpp  shapes.h
tests/fixtures/multi-lang-project/src/python/: main.py  shapes.py
tests/fixtures/multi-lang-project/src/rust/: Cargo.toml  lib.rs  shapes.rs
tests/fixtures/sample-project/: package.json  tsconfig.json
tests/helpers/: db-helper.ts  fs-helper.ts  setup.ts
tests/integration/: full-workflow.test.ts  init.test.ts  multi-lang.test.ts  update.test.ts
tests/unit/: index-prompt-guidance.test.ts
tests/unit/core/: workspace-indexer-lock.test.ts
tests/unit/frontends/: detect.test.ts  edge-targets.test.ts  frontend.test.ts  registry.test.ts
(+26 files in other folders)
